--- a/TrialProjectMVC/Views/Phonex/Delete.cshtml
+++ b/TrialProjectMVC/Views/Phonex/Delete.cshtml
@@ -1,26 +1,25 @@
 ﻿@model PhoneModel
 
 <form method="post">
+    <input asp-for="PhoneId" hidden />
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary">Telefon Numarası Ekle</h2>
+            <h2 class="text-primary">Bilgileri Sil</h2>
             <hr />
         </div>
         <div asp-validation-summary="ModelOnly"></div>
         <div class="mb-3 row p-1">
             <label asp-for="Phone" class="p-0"></label>
-            <input asp-for="Phone" class="form-control" />
-            <span asp-validation-for="Phone" class="text-danger"></span>
+            <input asp-for="Phone" disabled class="form-control" />
         </div>
         <div class="mb-3 row p-1">
             <label asp-for="Address" class="p-0">Adres</label>
-            <input asp-for="Address" class="form-control" />
-            <span asp-validation-for="Address" class="text-danger"></span>
+            <input asp-for="Address" disabled class="form-control" />
 
         </div>
         <div class="row">
             <div class="col-6 col-md-3">
-                <button type="submit" class="btn btn-primary form-control" >Ekle</button>
+                <button type="submit" class="btn btn-danger form-control">Sil</button>
             </div>
             <div class="col-6 col-md-3">
                 <a asp-controller="Phonex" asp-action="Index" class="btn btn-secondary border form-control">
@@ -30,9 +29,3 @@
         </div>
     </div>
 </form>
-
-@section Scripts{
-    @{
-    <partial name="_ValidationScriptsPartial"/>
-    }
-}
