--- a/TrialProjectMVC/Views/Phonex/Edit.cshtml
+++ b/TrialProjectMVC/Views/Phonex/Edit.cshtml
@@ -1,9 +1,10 @@
 ﻿@model PhoneModel
 
 <form method="post">
+    <input asp-for="PhoneId" hidden />
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary">Telefon Numarası Ekle</h2>
+            <h2 class="text-primary">Bilgileri Güncelle</h2>
             <hr />
         </div>
         <div asp-validation-summary="ModelOnly"></div>
@@ -20,7 +21,7 @@
         </div>
         <div class="row">
             <div class="col-6 col-md-3">
-                <button type="submit" class="btn btn-primary form-control" >Ekle</button>
+                <button type="submit" class="btn btn-primary form-control">Uygula</button>
             </div>
             <div class="col-6 col-md-3">
                 <a asp-controller="Phonex" asp-action="Index" class="btn btn-secondary border form-control">
@@ -33,6 +34,6 @@
 
 @section Scripts{
     @{
-    <partial name="_ValidationScriptsPartial"/>
+        <partial name="_ValidationScriptsPartial" />
     }
 }
