--- a/TrialProjectMVC/Views/Phonex/Index.cshtml
+++ b/TrialProjectMVC/Views/Phonex/Index.cshtml
@@ -24,6 +24,7 @@
             <th>
                 Adres
             </th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -33,6 +34,16 @@
                 <td>@obj.Phone</td>
                 <td>
                     @obj.Address
+                </td>
+                <td>
+                    <div class="w-75 btn-group" role="group">
+                        <a asp-controller="Phonex" asp-action="Edit" asp-route-id="@obj.PhoneId" class="btn btn-primary mx-2">
+                                <i class="bi bi-pencil-square"></i> Düzenle
+                        </a>
+                            <a asp-controller="Phonex" asp-action="Delete" asp-route-id="@obj.PhoneId" class="btn btn-danger mx-2">
+                                <i class="bi bi-trash3-fill"></i> Sil
+                            </a>
+                    </div>
                 </td>
             </tr>
         }
